feat: create fertilizers implemented